test/typeCheckBadLength.slq

def bar(x: !Î (n:!â„•^1)qfree. ğ”¹^n)qfreeâ‡’x(3,); // error
def zeros(m:!â„•,)qfreeâ‡’vector(m,0:ğ”¹);
def main()â‡’bar(zeros);
